--- a/stock-analysis.html
+++ b/stock-analysis.html
@@ -576,6 +576,10 @@
     </style>
 </head>
 <body>
+
+    <script src="/pp-auth.js"></script>
+      <script>ensureSessionOrRedirect();</script>
+    
     <!-- Background Animation -->
     <div class="background-animation">
         <div class="floating-shape" style="width: 100px; height: 100px; top: 10%; left: 80%; animation-delay: 0s;"></div>
